SERVER-48230: Release cursor resources for special oplog functions.